<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="open">NavBar</string>
    <string name="close">NavBar</string>
    <string name="app_name">BeBalanced</string>


    <string-array name="fruits_name">
        <item>Fruit 1</item>
        <item>Apple</item>
        <item>Blueberries</item>
        <item>Orange</item>
        <item>Grapefruit</item>
        <item>Pears</item>
        <item>Raspberries</item>
        <item>Strawberries</item>
    </string-array>
    <string-array name="fruits_name1">
        <item>Fruit 2</item>
        <item>Apple</item>
        <item>Blueberries</item>
        <item>Orange</item>
        <item>Grapefruit</item>
        <item>Pears</item>
        <item>Raspberries</item>
        <item>Strawberries</item>
    </string-array>

    <string-array name="veggies_name1">
        <item>Veggies1</item>
        <item>Asparagus</item>
        <item>Broccoli</item>
        <item>Brussels Sprouts</item>
        <item>Cabbage</item>
        <item>Cauliflower</item>
        <item>Celery</item>
        <item>Cucumber</item>
        <item>Lettuce</item>
        <item>Onion</item>
        <item>Radish</item>
        <item>Sauerkraut</item>
        <item>Spinach</item>
        <item>Tomatoes</item>
    </string-array>

    <string-array name="veggies_name2">
        <item>Veggies2</item>
        <item>Asparagus</item>
        <item>Broccoli</item>
        <item>Brussels Sprouts</item>
        <item>Cabbage</item>
        <item>Cauliflower</item>
        <item>Celery</item>
        <item>Cucumber</item>
        <item>Lettuce</item>
        <item>Onion</item>
        <item>Radish</item>
        <item>Sauerkraut</item>
        <item>Spinach</item>
        <item>Tomatoes</item>
    </string-array>

    <string-array name="cupsize">
        <item>Cups</item>
        <item tools:ignore="TypographyFractions">1/2 Cup</item>
        <item>1 Cup</item>


    </string-array>

    <string-array name="bool">
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>

    </string-array>

    <string-array name="meat_name">
        <item>Protein 1</item>
        <item>Chicken Breast</item>
        <item>Scallops</item>
        <item>Shrimp</item>
        <item>Crab/Lobster</item>
        <item>Ground Beef 95%</item>
        <item>Ground Turkey 96%</item>
        <item>Too Sirloin Steak</item>
        <item>Turkey Breast</item>
        <item>White Fish</item>
        <item>1 Egg &amp; 2 Egg Whites</item>
        <item>Starch/Crackers</item>
        <item>Daily Calorie Intake</item>
        <item>Turkey Breast</item>

    </string-array>
    <string-array name="meat_name1">
        <item>Protein 2</item>
        <item>Chicken Breast</item>
        <item>Scallops</item>
        <item>Shrimp</item>
        <item>Crab/Lobster</item>
        <item>Ground Beef 95%</item>
        <item>Ground Turkey 96%</item>
        <item>Too Sirloin Steak</item>
        <item>Turkey Breast</item>
        <item>White Fish</item>
        <item>1 Egg &amp; 2 Egg Whites</item>
        <item>Starch/Crackers</item>
        <item>Daily Calorie Intake</item>
        <item>Turkey Breast</item>

    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="meditations">Meditations</string>
    <string name="badges">Badges</string>
    <string name="alarms">Alarms</string>
    <string name="about_us">About Us</string>
    <string name="weight_loss_graph">Weight Loss Graph</string>
    <string name="history">History</string>
    <string name="sign_out">Sign Out</string>
    <string name="how_are_you_today">How are you Today?</string>
    <string name="apple">Apple</string>
    <string name="morning">Morning</string>
    <string name="songicon">icon</string>
    <string name="songstopicon">songStopIcon</string>
    <string name="songpauseicon">songPauseIcon</string>
    <string name="songplayicon">songPlayicon</string>
    <string name="title_activity_alarm_reminder">AlarmReminder</string>


    <string-array name="occurence">
        <item>Once</item>
        <item>Daily</item>
    </string-array>

    <string-array name="pref_alarm_play_time_entries">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>

    <string-array name="pref_alarm_play_time_values">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>


</resources>
