<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/meditation"
        android:title="@string/meditations"
        android:icon="@drawable/music"

        />
    <item
        android:id="@+id/badges"
        android:title="@string/badges"
        android:icon="@drawable/bookmark"

        />
    <item
        android:id="@+id/alarms"
        android:title="@string/alarms"
        android:icon="@drawable/alarm_clock"

        />
    <item
        android:id="@+id/about"
        android:title="@string/about_us"
        android:icon="@drawable/info"

        />
    <item
        android:id="@+id/w_l_g"
        android:title="@string/weight_loss_graph"
        android:icon="@drawable/line_chart"

        />
    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/history_button"

        />
    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        android:icon="@drawable/key"

        />

</menu>