<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridViewActivity">


    <TextView
        android:id="@+id/griddata1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/kgsevensixteen"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="How are you Today?"
        android:textColor="#000"
        android:textSize="30dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/apple1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/griddata1"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/griddata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="25dp"
        android:text="Apple"
        android:fontFamily="@font/kgsevensixteen"
        android:textColor="#000"
        android:textSize="30dp" />


    <TextView
        android:id="@+id/grid_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/griddata"
        android:layout_marginTop="20dp"
        android:text="0/2"
        android:textColor="#000"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="130dp"
        android:background="@drawable/gradient_spinner"


        />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/gradient_spinner"

        />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="38dp"
        android:text="Yes" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="38dp"
        android:text="No" />




    <EditText
        android:id="@+id/cracker"
        android:layout_width="100dp"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"

        android:text="1"
        tools:text="2" />

    <Button
        android:id="@+id/mns"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="38dp"

        android:text="@string/minus"
        tools:ignore="RelativeOverlap"
        android:layout_marginLeft="38dp"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/pls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="38dp"
        android:text="@string/plus"
        tools:ignore="RelativeOverlap"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp" />

    <Button

        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/add" />


</RelativeLayout>